# DearImXML

./: .gitignore  CMakeLists.txt  README.md
DearImXML/Assets/: test.xml
DearImXML/src/: ImGuiEnum.h  XMLDynamicBind.h  XMLEventHandler.h  XMLReader.cpp  XMLReader.h  XMLRenderer.h  XMLTree.h  main.cpp
includes/GL/: glcorearb.h
includes/ImGUI/: imconfig.h  imgui.cpp  imgui.h  imgui_impl_glfw.h  imgui_impl_opengl3.h  imgui_impl_opengl3_loader.h  imgui_stdlib.h  imstb_truetype.h
includes/stb/: stb_image.h
tools/: flags_mapper.py
